--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=FishFinder
-version=0.1.0
+version=0.2.0
 license=GPL 3
 author=Jan Benda <jan.benda@uni-tuebingen.de>
 maintainer=Jan Benda <jan.benda@uni-tuebingen.de>
@@ -8,4 +8,4 @@ paragraph=Record EODs of electricfish with audio monitor and many online analysi
 category=Signal Input/Output
 url=https://github.com/janscience/FishFinder
 repository=https://github.com/janscience/FishFinder
-architectures=*
+architectures=teensy,avr
